--- a/main.html
+++ b/main.html
@@ -10,7 +10,21 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<div>
+	<p>first paragraph</p>
+	<p>second paragreph</p>
+	<p>third paragraph</p>
+	</div>
+	<ul>
+		<li>item 1</li>
+		<li>item 2</li>
+		<li>item 3</li>
+		<li>item 4</li>
+		<li>item 5</li>
+	</ul>
 </body>
 
+
+
+	
 </html>
